--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: 🚀 Deploy
+name: Deploy
 
 on:
   push:
@@ -88,7 +88,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 🏄 Copy test env vars
-        run: cp .env.example .env
+        run: cp .env .env
 
       - name: ⎔ Setup node
         uses: actions/setup-node@v4
