--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,8 +87,8 @@ jobs:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v4
 
-      - name: 🏄 Copy test env vars
-        run: cp .env .env
+      # - name: 🏄 Copy test env vars
+      #   run: cp .env .env
 
       - name: ⎔ Setup node
         uses: actions/setup-node@v4
