--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,25 +40,25 @@ jobs:
       - name: 🔬 Lint
         run: npm run lint
 
-  typecheck:
-    name: ʦ TypeScript
-    runs-on: ubuntu-latest
-    steps:
-      - name: ⬇️ Checkout repo
-        uses: actions/checkout@v4
+  # typecheck:
+  #   name: ʦ TypeScript
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: ⬇️ Checkout repo
+  #       uses: actions/checkout@v4
 
-      - name: ⎔ Setup node
-        uses: actions/setup-node@v4
-        with:
-          cache: npm
-          cache-dependency-path: ./package.json
-          node-version: 18
+  #     - name: ⎔ Setup node
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         cache: npm
+  #         cache-dependency-path: ./package.json
+  #         node-version: 18
 
-      - name: 📥 Install deps
-        run: npm install
+  #     - name: 📥 Install deps
+  #       run: npm install
 
-      - name: 🔎 Type check
-        run: npm run typecheck --if-present
+  #     - name: 🔎 Type check
+  #       run: npm run typecheck --if-present
 
   vitest:
     name: ⚡ Vitest
@@ -112,7 +112,7 @@ jobs:
           PORT: "8811"
 
   deploy:
-    needs: [lint, typecheck, vitest, cypress]
+    needs: [lint, vitest, cypress]
     runs-on: ubuntu-latest
 
     steps:
